--- a/app.json
+++ b/app.json
@@ -6,6 +6,10 @@
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "invent",
+    "updates": {
+  "url": "https://u.expo.dev/091de472-af28-4739-b36e-a0164be6d02f",
+  "fallbackToCacheTimeout": 0
+},
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
